--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.25",
+    "uuid": "^8.3.0",
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
